# email-assistant

./: .gitignore  AI_GUIDELINES.md  README.md
backend/: .env.example  .gitignore  README.md  main_with_db_populate.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
backend/app/: config.py  dependencies.py  main.py  middleware.py
backend/app/models/: assistant_task.py  email_message.py  user_settings.py  webhook_security.py
backend/app/services/: action_suggester.py  ai_client.py  context_classifier.py  duplicate_detection.py  email_summarizer.py  email_task_mapper.py  mailbox_provisioning.py  onboarding.py  spam_keywords.json  task_classifier.py  webhook_security.py
backend/app/strategies/: action_registry.py  approval_actions.py  default.py  email_actions.py  sales.py  scheduling.py  task_actions.py
backend/app/utils/: email_retrieval_utils.py  email_utils.py  logging.py  user_utils.py
backend/scripts/: migrate_user_id.py  populate_test_data.py
backend/tests/: baseline.md  conftest.py  test_main.py
backend/tests/integration/: test_ai_integration.py
backend/tests/test_routes/: conftest.py  refactor_strategy.md  test_email.py  test_email_end_to_end.py  test_email_to_task_endpoint.py  test_email_user_id.py  test_malformed_email_api.py  test_settings.py  test_tasks.py  test_webhook_security.py
backend/tests/test_scripts/: skip_test_migrate_user_id.py
backend/tests/test_services/: conftest.py  test_action_suggester.py  test_ai_client.py  test_context_classifier.py  test_duplicate_detection.py  test_email_summarizer.py  test_email_task_mapper.py  test_email_to_task_conversion.py  test_mailbox_provisioning.py  test_malformed_emails.py  test_rate_limiting.py  test_spam_filtering.py  test_task_classifier.py  test_user_data_isolation.py  test_user_id_assignment.py  test_webhook_security_application.py
backend/tests/utils/: fakes.py  openai_mocks.py
docs/: user-stories.md  (+3 more)
(+58 files in other folders)
